Front end player work

--- a/app/views/movies/watch.html.erb
+++ b/app/views/movies/watch.html.erb
@@ -5,6 +5,8 @@
 
     <div class="player-controls">
         <button id="play-pause-button" class="play" title="Play" onclick="togglePlayPause()">Play</button>
+        <button title="Play" onclick="toggleFastRewind()"><<</button>
+        <button  title="Play" onclick="toggleFastForward()">>></button>
 
         <button class="get-code-button" title="Get code" >Get code</button>
     </div>
