--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,13 @@
   <% yield :head %>
 </head>
 <body>
-	<nav>
-	<% if current_user %>
-		<%= link_to 'Déconnexion', signout_path, id: 'sign_out' %>
-	<% else %>
-		<%= link_to 'Se connecter avec Facebook', 'auth/facebook', id: 'sign_in' %>
-	<% end %>
+	<nav class="navbar">
+		<%= link_to 'Accueil', root_path %> | 
+		<% if current_user %>
+			<%= link_to 'Déconnexion', signout_path, id: 'sign_out' %>
+		<% else %>
+			<%= link_to 'Se connecter avec Facebook', login_path, id: 'sign_in' %>
+		<% end %>
 	</nav>
 
 <%= yield %>
