--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the Static controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body, html {
+	background: #000;
+	color: white;
+	width: 100%;
+}
+
+.home {
+	.home-title {
+		width: 600px;
+		text-align: center;
+		margin: 120px auto 0 auto;
+		font-size: 85px;
+	}
+
+	.home-subtitle {
+		@extend .home-title;
+		margin-top: 10px;
+		font-size: 14px;
+		font-family: 'Helvetica Neue', sans-serif;
+		text-transform: uppercase;
+	}
+}
