--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -2,10 +2,45 @@
 
 $scope_blue: #04e5e8;
 
+body, html {
+	margin: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
 .with-font {
 	font-family: 'TwoFaced', sans-serif;
 }
 
 .blue {
 	color: $scope_blue;
+}
+
+.button-link {
+	color: white;
+	border: 2px solid $scope_blue;
+	text-transform: uppercase;
+	padding: 10px;
+	text-decoration: none;			
+}
+
+.navbar {
+	padding: 8px 10px 6px 20px;
+	border-bottom: 2px solid $scope_blue;
+
+	a {
+		color: white;
+		text-transform: uppercase;
+		margin: 0 8px 0 8px;
+		font-size: 14px;
+		position: relative; bottom: 5px;
+	}
+	
+	a.nav-scope {
+		bottom: 0;
+		color: white;
+		font-size: 30px;
+	}
 }
