--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -6,6 +6,7 @@ body, html {
 	background: #000;
 	color: white;
 	width: 100%;
+	font-family: 'Helvetica Neue', sans-serif;
 }
 
 .home {
@@ -13,14 +14,31 @@ body, html {
 		width: 600px;
 		text-align: center;
 		margin: 120px auto 0 auto;
-		font-size: 85px;
+		font-size: 94px;
 	}
 
 	.home-subtitle {
 		@extend .home-title;
-		margin-top: 10px;
-		font-size: 14px;
-		font-family: 'Helvetica Neue', sans-serif;
+		margin-top: 0px;
+		font-size: 13px;
+		
 		text-transform: uppercase;
+	}
+
+	.home-actions {
+		text-transform: uppercase;
+		width: 600px;
+		margin: 100px auto 0 auto;
+		text-align: center;
+
+		a#sign_in {
+			font-size: 16px;
+		}
+	}
+
+	.button-link {
+		display: inline-block;
+		width: 220px;
+		margin: 0 20px 0 20px;
 	}
 }
