--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -49,3 +49,37 @@ $scope_blue: #04e5e8;
 		margin-top: 25px;
 	}
 }
+
+.finder {
+	text-align: center;
+	margin-top: 100px;
+
+	h1 {
+		text-transform: uppercase;
+	}
+
+	.mood-buttons {
+
+		text-align: center;
+		width: 800px;
+		margin: auto;
+
+		.button-link {
+			cursor: pointer;
+			width: 120px;
+			float: left;
+			margin-right: 15px;
+		}
+
+	}
+}
+
+.player-wrapper {
+	width: 100%;
+	height: 100%;
+
+	video {
+		width: 100%;
+		height: 90%;
+	}
+}
