Movie finder and movies UI

--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -27,11 +27,11 @@ a {
 }
 
 .navbar {
-	padding: 8px 10px 6px 20px;
+	padding: 8px 0 6px 0;
 	border-bottom: 2px solid $scope_blue;
 	z-index: 200;
 	position: absolute; top: 0; left: 0;
-	background: #000;
+	background: #020202;
 	width: 100%;
 
 	a {
@@ -46,6 +46,7 @@ a {
 		bottom: 0;
 		color: white;
 		font-size: 30px;
+		padding-left: 10px;
 	}
 
 	.nav-right {
