--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -3,11 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body, html {
-	background: #000;
+	background: #020202;
 	color: white;
 	width: 100%;
 	height: 100%;
 	font-family: 'Helvetica Neue', sans-serif;
+	padding: 0; margin: 0;
 }
 
 .home {
