--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -30,7 +30,7 @@ a {
 	padding: 8px 0 6px 0;
 	border-bottom: 2px solid $scope_blue;
 	z-index: 200;
-	position: absolute; top: 0; left: 0;
+	position: fixed; top: 0; left: 0;
 	background: #020202;
 	width: 100%;
 
