--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -67,20 +67,30 @@ $scope_blue: #04e5e8;
 ****************************/
 
 div.movie-more {
-	padding-top: 0;
+	padding-top: 55px;
 	height: 100%;
 	width: 100%;
 	min-height: 2000px; // dirty, to remove
 	background: #eee;
 
 	.hidden-nav {
-		position: relative; z-index: 150;
+		position: fixed; z-index: 150;
 		width: 100%;
 		height: 50px;
 		background: #232323;
 		border-bottom: 1px solid $scope_blue;
 		text-align: center;
 		top: 0px;
+
+		.hidden-nav-wrapper {
+			width: 600px;
+			margin: auto;
+
+			a { float: left; margin: 5px 80px 0 80px; display: block; width: 40px; height: 40px; }
+			a.doc { background: asset-url('movie-nav-doc.png') no-repeat center center; }
+			a.watch { background: asset-url('movie-nav-watch.png') no-repeat center center; }
+			a.social { background: asset-url('movie-nav-social.png') no-repeat center center; }
+		}
 	}
 
 	.movie-more-head {
