Work on server and movie UI

--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -9,6 +9,8 @@
 
         %button.get-code-button Get code
 
+    .notice-flash
+
     - if current_user
         :javascript
             var FACEBOOK_ID = "#{current_user.uid}";
