--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -34,12 +34,15 @@ a {
 	background: #020202;
 	width: 100%;
 
+
 	a {
 		color: white;
 		text-transform: uppercase;
 		margin: 0 8px 0 8px;
-		font-size: 14px;
-		position: relative; bottom: 5px;
+		font-size: 12px;
+		position: relative; bottom: 8px;
+		border-left: 1px solid white;
+		padding: 0 8px 0 15px;
 	}
 	
 	a.nav-scope {
@@ -47,6 +50,7 @@ a {
 		color: white;
 		font-size: 30px;
 		padding-left: 10px;
+		border-left: 0px;
 	}
 
 	.nav-right {
@@ -57,14 +61,25 @@ a {
 	.nav-search {
 		display: inline;
 		position: relative; bottom: 10px;
+		
 
 		form { display: inline; }
 
 		input {
 			height: 20px;
-			width: 200px;
+			width: 300px;
 
+			background-color: #212121;
+			border: 1px solid #2e2e2e;
+			border-radius: 1px;
 			text-transform: uppercase;
+			padding: 4px 4px 4px 10px;
+			color: white;
+			font-size: 12px;
+
+			background-image: asset-url('search-bg.png');
+			background-repeat: no-repeat;
+			background-position: 96% center;
 		}
 	}
 }
