--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -174,6 +174,33 @@ div.movie-more {
 		}
 
 	}
+
+	.mood-line {
+		width: 100%;
+		position: absolute; top: 50%;
+
+		.line {
+			background: $scope_blue;
+			height: 2px;
+			width: 100%;
+		}
+
+		.line-elements {
+			width: 850px;
+			margin: auto;
+		}
+
+		.line-element {
+			cursor: pointer;
+			display: none;
+			width: 140px; height: 60px;
+			background: asset-url('finder-mood-ball.png') no-repeat center top;
+			padding-top: 30px;
+			font-size: 18px;
+			float: left; position: relative; bottom: 7px;
+			margin-right: 30px;
+		}
+	}
 }
 
 .player-wrapper {
@@ -184,6 +211,12 @@ div.movie-more {
 		width: 100%;
 		height: 90%;
 	}
+}
+
+.notice-flash {
+	position: absolute; top: 80px; right: 20px; z-index: 255;
+	width: 20px; height: 20px; background-color: #eb0550; border-radius: 15px;
+	display: none;
 }
 
 
