--- a/app/views/movies/finder/mood.html.haml
+++ b/app/views/movies/finder/mood.html.haml
@@ -8,5 +8,15 @@
 		.button-link#mood-action{ data: { mood: 'action' } } D'action
 		.button-link#mood-emotions{ data: { mood: 'emotions' } } D'émotions
 
+	.mood-line
+		.line
+
+		.line-elements
+			.line-element#line-laugh De rire
+			.line-element#line-scared De frissons
+			.line-element#line-escape De vous évader
+			.line-element#line-action D'action
+			.line-element#line-emotions D'émotions
+
 	.next
 		= link_to 'Suivant', find_movies_path(step: 2)
