--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -21,7 +21,7 @@
             CHAPTERS[#{chapter.number}] = #{chapter.timecode};
 
     :javascript
-        $(document).on('page:change', function () {
+        $(function () {
             api.beginConnection(function () {
                 console.log('connected')
                 if (typeof FACEBOOK_ID != 'undefined') {
