--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
 	%head
-		%title Scope
+		%title SCOPE | L'oeil ouvert sur le monde
 		= stylesheet_link_tag    "application", media: "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
