--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -1,6 +1,6 @@
 .player-wrapper
     %video.player#player(controls)
-        %source{ src: '/medias/film.mp4', type: 'video/mp4' }
+        %source{ src: "/medias/film.m4v", type: 'video/mp4' }
 
     .player-controls
         %button#play-pause-button.play{ onclick: 'togglePlayPause()' } Play
