--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -9,3 +9,15 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'Aller';
+    src: asset-url('aller_lt-webfont.eot');
+    src: asset-url('aller_lt-webfont.eot?#iefix') format('embedded-opentype'),
+         asset-url('aller_lt-webfont.woff') format('woff'),
+         asset-url('aller_lt-webfont.ttf') format('truetype'),
+         asset-url('aller_lt-webfont.svg#aller_lightregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
