--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -7,7 +7,7 @@ body, html {
 	color: white;
 	width: 100%;
 	height: 100%;
-	font-family: 'Helvetica Neue', sans-serif;
+	font-family: 'Aller', sans-serif;
 	padding: 0; margin: 0;
 }
 
@@ -17,6 +17,8 @@ body, html {
 		text-align: center;
 		margin: 120px auto 0 auto;
 		font-size: 94px;
+
+		a { color: white; }
 	}
 
 	.home-subtitle {
@@ -42,5 +44,12 @@ body, html {
 		display: inline-block;
 		width: 220px;
 		margin: 0 20px 0 20px;
+	}
+
+	.home-username {
+		color: white; font-family: 11px;
+		display: block; margin-bottom: 10px; text-transform: none;
+
+		a { color: white; }
 	}
 }
