--- a/app/views/movies/finder/mood.html.haml
+++ b/app/views/movies/finder/mood.html.haml
@@ -1,13 +1,7 @@
 .finder.finder-mood
 	%h1.finder-title.with-font Vous avez besoin...
 
-	.mood-buttons
-		.button-link#mood-laugh{ data: { mood: 'laugh' } } De rire
-		.button-link#mood-scared{ data: { mood: 'scared' } } De frissons
-		.button-link#mood-escape{ data: { mood: 'escape' } } De s'évader
-		.button-link#mood-action{ data: { mood: 'action' } } D'action
-		.button-link#mood-emotions{ data: { mood: 'emotions' } } D'émotions
-
+	
 	.mood-line
 		.line
 
@@ -19,4 +13,11 @@
 			.line-element#line-emotions D'émotions
 
 	.next
-		= link_to 'Suivant', find_movies_path(step: 2)
+		= link_to '', find_movies_path(step: 2)
+
+	.mood-buttons
+		.button-link#mood-laugh{ data: { mood: 'laugh' } } De rire
+		.button-link#mood-scared{ data: { mood: 'scared' } } De frissons
+		.button-link#mood-escape{ data: { mood: 'escape' } } De s'évader
+		.button-link#mood-action{ data: { mood: 'action' } } D'action
+		.button-link#mood-emotions{ data: { mood: 'emotions' } } D'émotions
