--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -5,8 +5,11 @@
 $scope_blue: #04e5e8;
 
 .user {
-	margin: 100px auto 0 auto;
-	width: 700px;
+	margin: 0 auto 0 auto;
+	width: 100%; height: 100%;
+
+	background: asset-url('fake-profile.jpg') no-repeat left -10px;
+	background-size: cover;
 
 	.user-profile-title { color: white; }
 	.profile-picture { float: right; border: 1px solid $scope_blue; }
