--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -20,5 +20,5 @@
 		%a.movie-watch.button-link{ href: watch_movie_path(@movie) }
 			Lecture du film
 
-	%a.movie-new-search{ href: movies_path }
+	%a.movie-new-search{ href: find_movies_path }
 		nouvelle recherche
