--- a/app/views/movies/finder/related_facts.html.haml
+++ b/app/views/movies/finder/related_facts.html.haml
@@ -1,11 +1,31 @@
 .finder.finder-movies
-	%h1.finder-title.with-font Êtes vous intéréssé par...
+	%h1.finder-title.with-font Ce fait historique vous intéresse ?
 
 	.related-facts
-		- for i in 1..5
-			.fact{ :id => "fact-#{i}" }
-				.fact-image
-					%img
-		.no
+		.fact
+			.image
+				%img.poster-img.fact-img{ src: '' }
+			.fact-title.with-font
+			%p.fact-text
 
-		.yes
+		.no{ onclick: 'finderShiftFact(); finderPushFact();'}
+
+		.line-no
+
+		.yes{ onclick: 'finderShiftFact(); finderPushFact();'}
+
+		.line-yes
+
+		/.line-ball
+
+		/.next
+		/	= link_to '', find_movies_path(step: 4)
+
+
+%script
+	var FACTS = [];
+	var data = [];
+	var NEXT_URL = "#{find_movies_path(step: 4)}";
+	- for fact in @related_facts
+		data = { id: "#{fact.id}", image: "#{fact.photo}", title: "#{fact.title}", text: "#{fact.content}"};
+		FACTS.push(data);
