--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -9,7 +9,11 @@
 
         %button.get-code-button Get code
 
-    .notice-flash
+    .notice-flash.notice-flash-themes
+    .notice-flash.notice-flash-anecdotes
+    .notice-flash.notice-flash-analyse
+    .notice-flash.notice-flash-impact
+    .notice-flash.notice-flash-comment
 
     - if current_user
         :javascript
