--- a/app/views/movies/finder/mood.html.haml
+++ b/app/views/movies/finder/mood.html.haml
@@ -1,6 +1,8 @@
 .finder.finder-mood
+	.finder-subtitle Trouvons un film selon votre humeur
 	%h1.finder-title.with-font Vous avez besoin...
 
+	%a.quit{ href: root_path, title: 'Annuler ma recherche' }
 	
 	.mood-line
 		.line
