--- a/app/views/movies/finder/related_facts.html.haml
+++ b/app/views/movies/finder/related_facts.html.haml
@@ -1,4 +1,5 @@
 .finder.finder-movies
+	.finder-subtitle Pour finir, lions les genres...
 	%h1.finder-title.with-font Ce fait historique vous intéresse ?
 
 	.related-facts
