--- a/app/views/movies/finder/related_movies.html.haml
+++ b/app/views/movies/finder/related_movies.html.haml
@@ -1,4 +1,5 @@
 .finder.finder-movies
+	.finder-subtitle Lions nos films avec ceux que vous avez déjà vu
 	%h1.finder-title.with-font Avez-vous aimé...
 
 	.related-movies
