--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -11,13 +11,17 @@ $scope_blue: #04e5e8;
 .movie {
 	text-align: center;
 	text-transform: uppercase;
-	padding-top: 80px;
+	padding-top: 100px;
+	background: asset-url('samples/movie-show-bg.png') no-repeat center bottom fixed, #000;
+	background-size: cover;
+	width: 100%; height: 100%;
+
+	.found { padding-top: 10px; font-weight: bold; font-size: 14px; }
 
 	.movie-author, .movie-year {
 		font-size: 22px;
 		width: 450px;
 		margin: auto;
-		padding: 25px 0 25px 0;
 	}
 
 	.movie-scope {
@@ -30,15 +34,9 @@ $scope_blue: #04e5e8;
 	h1.movie-title {
 		font-size: 82px;
 		margin: 20px 0;
+		opacity: 0.2;
 	}
 
-	.movie-author {
-		border-bottom: 1px solid white;
-	}
-
-	.movie-year {
-		border-top: 1px solid white;
-	}
 
 	.movie-actions {
 		margin: 50px auto 0 auto;
@@ -46,8 +44,8 @@ $scope_blue: #04e5e8;
 
 
 		.movie-more, .movie-watch {
-			width: 250px;
-			margin: 15px;
+			width: 200px;
+			margin: 12px;
 			display: inline-block;
 		}
 
@@ -158,13 +156,16 @@ div.movie-more {
 
 	h1 {
 		text-transform: uppercase;
+		margin-top: 5px;
 	}
+
+	.finder-subtitle { text-transform: uppercase; font-size: 16px; }
 
 	.mood-buttons {
 
 		text-align: center;
 		width: 800px;
-		margin: 25% auto 0 auto;
+		margin: 30% auto 0 auto;
 
 		.button-link {
 			cursor: pointer;
@@ -177,7 +178,7 @@ div.movie-more {
 
 	.mood-line {
 		width: 100%;
-		position: absolute; top: 50%;
+		position: absolute; top: 450px;
 
 		.line {
 			background: $scope_blue;
@@ -193,13 +194,19 @@ div.movie-more {
 		.line-element {
 			cursor: pointer;
 			display: none;
-			width: 140px; height: 60px;
-			background: asset-url('finder-mood-ball.png') no-repeat center top;
-			padding-top: 30px;
+			width: 140px; height: 80px;
+			
+			padding-top: 90px;
 			font-size: 18px;
-			float: left; position: relative; bottom: 7px;
+			float: left; position: relative; bottom: 70px;
 			margin-right: 30px;
 		}
+
+		#line-emotions { background: asset-url('mood-emotions.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
+		#line-escape { background: asset-url('mood-escape.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
+		#line-scared { background: asset-url('mood-scared.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
+		#line-action { background: asset-url('mood-action.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
+		#line-laugh { background: asset-url('mood-laugh.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
 	}
 
 
@@ -246,10 +253,17 @@ div.movie-more {
 	}
 
 	.next a {
-		position: absolute; top: calc(50% - 30px); right: 30px;
+		position: absolute; top: 420px; right: 30px;
 		width: 62px; height: 85px;
 		display: block;
 		background: asset-url('finder-next.png') no-repeat center center;
+	}
+
+	.quit {
+		width: 33px; height: 33px;
+		background: asset-url('close.png') no-repeat;
+		position: absolute; top: 80px; left: 15px;
+		cursor: pointer;
 	}
 }
 
