--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,9 @@
 
 			= link_to 'Les films', :movies
 
-			= link_to 'On trouve pour vous', :find_movies
+			= link_to 'On trouve pour vous', :find_movies, class: 'blue'
+
+			= link_to "L'Application", nil
 
 			.nav-search
 				%form.search-form{ action: search_movies_path, method: :get }
@@ -26,7 +28,7 @@
 				- if current_user
 					= link_to 'Déconnexion', signout_path, id: 'sign_out'
 				- else
-					= link_to 'Se connecter avec Facebook', login_path, id: 'sign_in'
+					= link_to 'Inscription', login_path, id: 'sign_in'
 
 
 		= yield
