--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -4,8 +4,8 @@
 	/ 	%span.blue> 0
 	/ 	PE
 
-	%img{ src: '/assets/finder-found-picto.png'}
-	.found Nous vous conseillons
+	/ %img{ src: '/assets/finder-found-picto.png'}
+	/ .found Nous vous conseillons
 
 	%h1.movie-title.with-font
 		= @movie.title
