--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -11,8 +11,8 @@ $scope_blue: #04e5e8;
 .movie {
 	text-align: center;
 	text-transform: uppercase;
-	padding-top: 100px;
-	background: asset-url('samples/movie-show-bg.png') no-repeat center bottom fixed, #000;
+	padding-top: 30%;
+	background: asset-url('movie-bg.png') no-repeat center bottom fixed, #000;
 	background-size: cover;
 	width: 100%; height: 100%;
 
@@ -34,7 +34,7 @@ $scope_blue: #04e5e8;
 	h1.movie-title {
 		font-size: 82px;
 		margin: 20px 0;
-		opacity: 0.2;
+		color: #f0004e;
 	}
 
 
@@ -153,6 +153,9 @@ div.movie-more {
 .finder {
 	text-align: center;
 	padding-top: 100px;
+	height: 100%;
+	background: asset-url('finder-bg.png') no-repeat center center;
+	background-size: cover;
 
 	h1 {
 		text-transform: uppercase;
@@ -261,7 +264,7 @@ div.movie-more {
 
 	.quit {
 		width: 33px; height: 33px;
-		background: asset-url('close.png') no-repeat;
+		background: asset-url('back.png') no-repeat;
 		position: absolute; top: 80px; left: 15px;
 		cursor: pointer;
 	}
