--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -7,14 +7,14 @@
 
 	%h3.home-subtitle L'oeil ouvert sur le monde
 
-	%p.home-intro Suspendisse potenti. Curabitur aliquet ultrices libero non lacinia. Nulla sed luctus leo. Pellentesque egestas sapien cursus massa sagittis pellentesque. Aenean at aliquet eros. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras suscipit faucibus convallis. In vitae pretium diam. Vivamus consectetur vulputate metus et ullamcorper.
+	%p.home-intro Scope est un site de visionnage de films en streaming proposant d’augmenter l’expérience du 7ème art en synchronisant l’interface web et les supports mobiles, via l’application SCOPE.
 
 	.home-actions
 		- if not current_user
+			%img{ src: image_path('/assets/profile.png') }
+			%span.home-username Nouveau ?
 			%a{ href: '/auth/facebook', id: 'sign_in', class: 'blue' }
-				%img{ src: image_path('/assets/profile.png') }
-				%span.home-username Nouveau ?
-				Inscription rapide avec Facebook
+				Se connecter avec Facebook
 		- else
 			%img{ src: image_path('/assets/profile-picture-mask.png'), style: "background-image: url(http://graph.facebook.com/#{current_user.uid}/picture?type=normal); background-position: center;" }
 			
