--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -41,7 +41,7 @@ a {
 		color: white;
 		text-transform: uppercase;
 		margin: 0 8px 0 8px;
-		font-size: 12px;
+		font-size: 11px;
 		position: relative; bottom: 0px;
 		border-left: 1px solid white;
 		padding: 0 15px 0 15px;
@@ -68,7 +68,7 @@ a {
 		background: asset-url('navbar-profile.png') no-repeat left top;
 		height: 28px;
 
-		a { border: none; color: $scope_blue; }
+		a { border: none; color: $scope_blue; position: relative; bottom: 5px;}
 	}
 
 	.nav-search {
@@ -90,9 +90,11 @@ a {
 			text-transform: uppercase;
 			padding: 4px 4px 4px 0;
 			color: white;
-			font-size: 12px;
+			font-size: 11px;
 
 		}
+
+		.submit { position: relative; top: 12px; }
 	}
 }
 
