--- a/app/assets/stylesheets/generic.css.scss
+++ b/app/assets/stylesheets/generic.css.scss
@@ -91,7 +91,7 @@ a {
 			padding: 4px 4px 4px 0;
 			color: white;
 			font-size: 11px;
-
+			outline: none
 		}
 
 		.submit { position: relative; top: 12px; }
