Little fix picto

--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -289,7 +289,7 @@ div.movie-more {
 }
 
 .notice-flash-impact { background: asset-url('notif-picto-impact.png') no-repeat center; }
-.notice-flash-analyse { background: asset-url('notif-picto-analyse.png') no-repeat center; }
+.notice-flash-analyses { background: asset-url('notif-picto-analyses.png') no-repeat center; }
 .notice-flash-themes { background: asset-url('notif-picto-themes.png') no-repeat center; }
 .notice-flash-anecdotes { background: asset-url('notif-picto-anecdotes.png') no-repeat center; }
 .notice-flash-comment { background: asset-url('notif-picto-comment.png') no-repeat center; }
