--- a/app/views/movies/watch.html.haml
+++ b/app/views/movies/watch.html.haml
@@ -1,6 +1,6 @@
 .player-wrapper
     %video.player#player(controls)
-        %source{ src: "/medias/film.m4v", type: 'video/mp4' }
+        %source{ src: "/medias/film.m4v" , type: 'video/mp4' }
     
 
     .player-controls{ style:'display:none;'}
@@ -12,7 +12,7 @@
 
     .notice-flash.notice-flash-themes
     .notice-flash.notice-flash-anecdotes
-    .notice-flash.notice-flash-analyse
+    .notice-flash.notice-flash-analyses
     .notice-flash.notice-flash-impact
     .notice-flash.notice-flash-comment
 
