--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -11,8 +11,8 @@ $scope_blue: #04e5e8;
 .movie {
 	text-align: center;
 	text-transform: uppercase;
-	padding-top: 30%;
-	background: asset-url('movie-bg.png') no-repeat center bottom fixed, #000;
+	padding-top: 400px;
+	background: asset-url('movie-bg.png') no-repeat center -50px fixed, #000;
 	background-size: cover;
 	width: 100%; height: 100%;
 
@@ -22,6 +22,7 @@ $scope_blue: #04e5e8;
 		font-size: 22px;
 		width: 450px;
 		margin: auto;
+		font-family: 'Aller', sans-serif;
 	}
 
 	.movie-scope {
@@ -32,8 +33,8 @@ $scope_blue: #04e5e8;
 	}
 
 	h1.movie-title {
-		font-size: 82px;
-		margin: 20px 0;
+		font-size: 72px;
+		margin: 20px 0 0 0;
 		color: #f0004e;
 	}
 
@@ -44,9 +45,11 @@ $scope_blue: #04e5e8;
 
 
 		.movie-more, .movie-watch {
-			width: 200px;
+			width: 150px;
 			margin: 12px;
 			display: inline-block;
+			font-size: 12px;
+			background: #13161b;
 		}
 
 	}
@@ -92,11 +95,12 @@ div.movie-more {
 	}
 
 	.movie-more-head {
-		background-color: #131a21;
+		background-color: #18202b;
 		width: 100%;
+		height: 20%;
 		padding-top: 45px;
 		background-image: asset-url('samples/movie-more-visu.png');
-		background-repeat: no-repeat; background-position: center;
+		background-repeat: no-repeat; background-position: center top;
 
 		.movie-author, .movie-year { border: none; padding: 0; font-size: 18px; }
 		h1.movie-title { margin: 0; font-size: 60px; }
@@ -104,7 +108,7 @@ div.movie-more {
 		.movie-more-nav {
 			width: 600px;
 			height: 100px;
-			margin: 30px auto 0 auto;
+			margin: 250px auto 0 auto;
 
 			div {
 				float: left;
@@ -131,9 +135,9 @@ div.movie-more {
 
 	.movie-more-content {
 		.synopsis {
-			width: 700px; margin: auto;
-			h2 { padding-top: 10px; color: #f0004e; font-size: 27px; letter-spacing: 3px;}
-			.content { height: 250px; text-transform: none; color: black; line-height: 22px; }
+			width: 500px; margin: auto;
+			h2 { padding-top: 10px; color: #0cc4be; font-size: 27px; letter-spacing: 3px;}
+			.content { height: 250px; text-transform: none; color: black; font-size: 14px; line-height: 20px; }
 		}
 
 		.trailer {
@@ -150,12 +154,25 @@ div.movie-more {
 		MOVIE FINDER
 ****************************/
 
+* { overflow: hidden; }
+
+.movie-finder {
+	height: 100%;
+	width: 100%;
+	background: asset-url('finder-bg.png') no-repeat center center; 
+	background-size: cover;
+}
+
+.movie-found { position: absolute; left: 360%; top: 0; }
+
 .finder {
+
 	text-align: center;
 	padding-top: 100px;
 	height: 100%;
-	background: asset-url('finder-bg.png') no-repeat center center;
-	background-size: cover;
+	width: 100%;
+	
+	
 
 	h1 {
 		text-transform: uppercase;
@@ -167,32 +184,36 @@ div.movie-more {
 	.mood-buttons {
 
 		text-align: center;
-		width: 800px;
+		width: 900px;
 		margin: 30% auto 0 auto;
 
 		.button-link {
 			cursor: pointer;
-			width: 120px;
+			width: 140px;
 			float: left;
 			margin-right: 15px;
+			font-size: 14px;
+			text-transform: none;
 		}
 
 	}
 
 	.mood-line {
 		width: 100%;
-		position: absolute; top: 450px;
+		position: absolute; top: 400px;
 
 		.line {
 			background: #9ea3a9;
 			height: 2px;
 			width: 50%;
 			margin: auto;
+			margin-top: 70px;
 		}
 
 		.line-elements {
 			width: 850px;
 			margin: auto;
+			position: relative; bottom: 70px;
 		}
 
 		.line-element {
@@ -202,7 +223,8 @@ div.movie-more {
 			
 			padding-top: 90px;
 			font-size: 18px;
-			float: left; position: relative; bottom: 70px;
+			float: left;
+			
 			margin-right: 30px;
 		}
 
@@ -213,12 +235,13 @@ div.movie-more {
 		#line-laugh { background: asset-url('mood-laugh.png') no-repeat center top, asset-url('finder-mood-ball.png') no-repeat center 60px; }
 	}
 
+	
 
 	.related-movies, .related-facts {
 		.movie {
 			width: 354px;
 			height: 482px;
-			margin: auto;
+			margin: 60px auto;
 			padding: 0;
 		}
 
@@ -232,7 +255,6 @@ div.movie-more {
 		.fact-title { color: #f0004e; font-size: 22px; text-transform: uppercase; padding-top: 15px; }
 		.fact-text { color: black; padding: 5px 15px; }
 
-		.poster-img { margin-top: 10%; }
 		.fact-img {
 			max-width: 500px;
 			max-height: 482px;
@@ -240,19 +262,19 @@ div.movie-more {
 		}
 
 		.line-ball {
-			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(50% - 6px); 
+			width: 12px; height: 12px; background: asset-url('finder-line-ball.png') no-repeat center center; position: absolute; top: calc(470px - 6px); 
 		}
 
 		#movie-1 { display: block; }
 
-		.yes, .no { cursor: pointer; position: absolute; top: calc(50% - 35px); width: 70px; height: 70px; }
+		.yes, .no { cursor: pointer; position: absolute; top: calc(470px - 35px); width: 70px; height: 70px; }
 		.yes { right: 18%; background: asset-url('finder-yes.png') no-repeat right center; }
 		.no { left: 18%; background: asset-url('finder-no.png') no-repeat left center; }
 
-		.line-yes { position: absolute; right: 0px; top: 50%; height: 1px; width: 18%; background: $scope_blue; }
-		.line-no { position: absolute; left: 0px; top: 50%; height: 1px; width: 18%; background: $scope_blue; }
+		.line-yes { position: absolute; right: 0px; top: 470px; height: 1px; width: 18%; background: $scope_blue; }
+		.line-no { position: absolute; left: 0px; top: 470px; height: 1px; width: 18%; background: $scope_blue; }
 
-		.not-seen { display: block; cursor: pointer; margin-top: 60px; text-transform: uppercase; color: $scope_blue; font-size: 20px; font-weight: bold; }
+		.not-seen { display: block; cursor: pointer; margin: 60px auto; width: 150px; text-transform: uppercase; color: #fff; font-size: 12px; font-weight: bold; }
 
 	}
 
@@ -270,6 +292,10 @@ div.movie-more {
 		cursor: pointer;
 	}
 }
+
+.finder-mood { position: absolute; left: 0%;  top: 0; }
+.finder-movies { position: absolute; left: 120%;  top: 0; }
+.finder-facts { position: absolute; left: 240%; top: 0; }
 
 .player-wrapper {
 	width: 100%;
