--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -44,7 +44,7 @@ body, html {
 	.home-actions {
 		text-transform: uppercase;
 		width: 600px;
-		margin: 50px auto 0 auto;
+		margin: 80px auto 0 auto;
 		text-align: center;
 
 		a#sign_in {
@@ -63,6 +63,7 @@ body, html {
 		display: inline-block;
 		width: 220px;
 		margin: 0 20px 0 20px;
+		font-size: 12px;
 	}
 
 	.home-username {
