--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -67,6 +67,32 @@ $scope_blue: #04e5e8;
 		MOVIE / MORE
 ****************************/
 
+.movie-more-nav {
+	width: 600px;
+	height: 100px;
+	margin: 100px auto 0 auto;
+	display: none;
+
+	div {
+		float: left;
+		width: 200px;
+		padding-top: 45px;
+	}
+
+	.doc { background: asset-url('movie-nav-doc.png') no-repeat center top; }
+	.watch { background: asset-url('movie-nav-watch.png') no-repeat center top; }
+	.social { background: asset-url('movie-nav-social.png') no-repeat center top; }
+
+	.button-link {
+		display: block;
+		font-size: 12px;
+		width: 130px;
+		margin: auto;
+		height: 15px;
+		padding: 6px;
+	}
+}
+
 div.movie-more {
 	padding-top: 55px;
 	height: 100%;
@@ -99,55 +125,38 @@ div.movie-more {
 		width: 100%;
 		height: 20%;
 		padding-top: 45px;
-		background-image: asset-url('samples/movie-more-visu.png');
-		background-repeat: no-repeat; background-position: center top;
+		background: url(/assets/movie-bg.png) no-repeat center -50px fixed, black;
+		background-size: cover;
 
-		.movie-author, .movie-year { border: none; padding: 0; font-size: 18px; }
-		h1.movie-title { margin: 0; font-size: 60px; }
+		.movie-author, .movie-year { border: none; padding: 0; font-size: 16px; }
+		.movie-author { font-size: 26px; }
+		.movie-year { margin-top: 10px; }
+		h1.movie-title { margin: 0; font-size: 70px; }
 
-		.movie-more-nav {
-			width: 600px;
-			height: 100px;
-			margin: 250px auto 0 auto;
-
-			div {
-				float: left;
-				width: 200px;
-				padding-top: 45px;
-			}
-
-			.doc { background: asset-url('movie-nav-doc.png') no-repeat center top; }
-			.watch { background: asset-url('movie-nav-watch.png') no-repeat center top; }
-			.social { background: asset-url('movie-nav-social.png') no-repeat center top; }
-
-			.button-link {
-				display: block;
-				font-size: 12px;
-				width: 130px;
-				margin: auto;
-				height: 15px;
-				padding: 6px;
-			}
-		}
+		
 	}
 
 	
+}
 
-	.movie-more-content {
-		.synopsis {
-			width: 500px; margin: auto;
-			h2 { padding-top: 10px; color: #0cc4be; font-size: 27px; letter-spacing: 3px;}
-			.content { height: 250px; text-transform: none; color: black; font-size: 14px; line-height: 20px; }
-		}
+.movie-more-content {
+	display: none;
+	width: 100%;
+	background-color: #f9f8f8;
 
-		.trailer {
-			width: 100%; height: 100%;
-			background: #000;
-		}
-
-		.discover-more { text-transform: uppercase; position: absolute; bottom: 20px; left: 0; width: 100%; }
-		.discover-more a { color: black; } 
+	.synopsis {
+		width: 500px; margin: auto; height: 700px;
+		h2 { padding-top: 10px; color: #0cc4be; font-size: 27px; letter-spacing: 3px;}
+		.content { height: 250px; text-transform: none; color: black; font-size: 14px; line-height: 20px; }
 	}
+
+	.trailer {
+		width: 100%; height: 100%;
+		background: #000;
+	}
+
+	.discover-more { text-transform: uppercase; position: absolute; bottom: 20px; left: 0; width: 100%; }
+	.discover-more a { color: black; } 
 }
 
 /****************************
@@ -163,7 +172,15 @@ div.movie-more {
 	background-size: cover;
 }
 
-.movie-found { position: absolute; left: 360%; top: 0; }
+.movie-found {
+	position: absolute;
+	left: 360%; top: 0;
+
+	.movie-author, .movie-year { border: none; padding: 0; font-size: 16px; }
+	.movie-author { font-size: 26px; }
+	.movie-year { margin-top: 10px; }
+	h1.movie-title { margin: 0; font-size: 70px; }
+}
 
 .finder {
 
