--- a/app/assets/stylesheets/movies.css.scss
+++ b/app/assets/stylesheets/movies.css.scss
@@ -217,7 +217,7 @@ div.movie-more {
 
 	.mood-line {
 		width: 100%;
-		position: absolute; top: 400px;
+		position: absolute; top: 40%;
 
 		.line {
 			background: #9ea3a9;
@@ -284,19 +284,19 @@ div.movie-more {
 
 		#movie-1 { display: block; }
 
-		.yes, .no { cursor: pointer; position: absolute; top: calc(470px - 35px); width: 70px; height: 70px; }
+		.yes, .no { cursor: pointer; position: absolute; top: calc(46% - 35px); width: 70px; height: 70px; }
 		.yes { right: 18%; background: asset-url('finder-yes.png') no-repeat right center; }
 		.no { left: 18%; background: asset-url('finder-no.png') no-repeat left center; }
 
-		.line-yes { position: absolute; right: 0px; top: 470px; height: 1px; width: 18%; background: $scope_blue; }
-		.line-no { position: absolute; left: 0px; top: 470px; height: 1px; width: 18%; background: $scope_blue; }
+		.line-yes { position: absolute; right: 0px; top: 46%; height: 1px; width: 18%; background: $scope_blue; }
+		.line-no { position: absolute; left: 0px; top: 46%; height: 1px; width: 18%; background: $scope_blue; }
 
 		.not-seen { display: block; cursor: pointer; margin: 60px auto; width: 150px; text-transform: uppercase; color: #fff; font-size: 12px; font-weight: bold; }
 
 	}
 
 	.next a {
-		position: absolute; top: 420px; right: 30px;
+		position: absolute; top: 43%; right: 30px;
 		width: 62px; height: 85px;
 		display: block;
 		background: asset-url('finder-next.png') no-repeat center center;
